-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
5.5.1, 5.6.0 RC
-
X11 Windows OS X
As mentioned in subject QGuiApplication::sync() is missing when QT_NO_SESSIONMANGER is set
3280 void QGuiApplication::sync()
3281 {
3282 QCoreApplication::processEvents();
3283 if (QGuiApplicationPrivate::platform_integration
3284 && QGuiApplicationPrivate::platform_integration->hasCapability(QPlatformIntegration::SyncState)) {
3285 QGuiApplicationPrivate::platform_integration->sync();
3286 QCoreApplication::processEvents();
3287 QWindowSystemInterface::flushWindowSystemEvents();
3288 }
3289 }
3290
3291 void QGuiApplicationPrivate::commitData()
3292 {
3293 Q_Q(QGuiApplication);
3294 is_saving_session = true;
3295
3296 emit q->commitDataRequest(*session_manager);
3297 if (is_fallback_session_management_enabled && session_manager->allowsInteraction()
3298 && !tryCloseAllWindows()) {
3299 session_manager->cancel();
3300 }
3301
3302 is_saving_session = false;
3303 }
3304
3305
3306 void QGuiApplicationPrivate::saveState()
3307 {
3308 Q_Q(QGuiApplication);
3309 is_saving_session = true;
3310 emit q->saveStateRequest(*session_manager);
3311 is_saving_session = false;
3312 }
3313 #endif //QT_NO_SESSIONMANAGER
File qt5/qtbase/src/gui/kernel/qguiapplication.cpp
Branch: was seen even in 5.6
https://codereview.qt-project.org/#/c/69216/5/src/gui/kernel/qguiapplication.cpp
Change-Id: I691bff365fc391e9d7213f2607008983505bb774